# Fatec-Python

./: README.md  main.py  pyproject.toml
receitas/: Arroz de forno.txt  Beijinho na travessa.txt  Bolo de fubá cremoso.txt  Cocada de travessa.txt  Coxinha sequinha e crocante.txt  Gelatina do pecado.txt  Macarrão de forno a portuguesa.txt  Patê de alho rápido e saboroso.txt  Pãozinho de minuto.txt  Suco para controlar o colesterol.txt
usuario/: alterar_conta.py  cadastro.py  login.py
utils/: comentarios.py  funcoes_auxiliares.py  importar_dados.py  receitas.py  sobre.py  telas.py
