[tool.poetry]
name = "fatec-python"
version = "0.1.0"
description = ""
authors = ["GabrielMachioni <gabrielmachioni@gmail.com>"]
readme = "README.md"
packages = [{include = "fatec_python"}]

[tool.poetry.dependencies]
python = "^3.10.11"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
